# nahmanboot

./: .gitignore  CMakeLists.txt  LICENSE  README
AK/: Assertions.h  Format.cpp  Format.h  JsonArraySerializer.h  JsonObject.h  JsonObjectSerializer.h  JsonParser.cpp  JsonValue.cpp  JsonValue.h  Memory.h  NonnullOwnPtr.h  NonnullRefPtr.h  NumericLimits.h  Platform.h  PrintfImplementation.h  RefPtr.h  Singleton.h  StdLibExtras.h  Stream.h  String.h  Types.h  Vector.h  kmalloc.h  kstdio.h
Configuration/ByteStream/: LayoutDraft.md
Core/: Assertions.cpp  Assertions.h  CMakeLists.txt  IO.h  StdLib.cpp  StdLib.h  boot.S  init.c  init.cpp  kprintf.cpp  kstdio.h  linker.ld
Core/Bus/PCI/: Device.h  Management.cpp  Management.h
Core/Images/: Multiboot.cpp  Multiboot.h
Core/Memory/: Management.cpp  Management.h  PhysicalAddress.h  PhysicalRange.h  PhysicalRegion.cpp  PhysicalRegion.h  TypedMapping.h  kmalloc.cpp  kmalloc.h
Meta/: test.sh
Toolchain/: build.sh
core/: CMakeLists.txt  boot.S  linker.ld
